--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div id="mobile-menu-icon" class="visible-xs" onClick="toggle_main_menu();"><span class="glyphicon glyphicon-th"></span></div>
 
         <ul id="main-menu">
-          <li id="menu-item-text" class="menu-item scroll"><a href="#text">Text</a></li>
+          <li id="menu-item-text" class="menu-item scroll"><a href="#text">About</a></li>
           <li id="menu-item-carousel" class="menu-item scroll"><a href="#carousel">Carousel</a></li>
           <li id="menu-item-grid" class="menu-item scroll"><a href="#grid">Grid</a></li>
           <li id="menu-item-featured" class="menu-item scroll"><a href="#featured">Featured</a></li>
