--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <ul id="main-menu">
           <li id="menu-item-text" class="menu-item scroll"><a href="#text">About</a></li>
           <li id="menu-item-carousel" class="menu-item scroll"><a href="#carousel">Projects</a></li>
-          <li id="menu-item-grid" class="menu-item scroll"><a href="#grid">Grid</a></li>
-          <!-- <li id="menu-item-featured" class="menu-item scroll"><a href="#featured">Featured</a></li> -->
+          <!-- <li id="menu-item-grid" class="menu-item scroll"><a href="#grid">Grid</a></li> -->
+          <li id="menu-item-featured" class="menu-item scroll"><a href="#featured">Education</a></li>
           <!-- <li id="menu-item-tabs" class="menu-item scroll"><a href="#tabs">Resume</a></li> -->
           <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">Contact</a></li>
         </ul><!-- #main-menu -->
@@ -98,11 +98,11 @@
 
                 <div class="content-to-populate-in-modal" id="modal-content-1">
                   <h1>Resume</h1>
-                  <p><img data-img-src="assets/images/other_images/transp-image4.png" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in urna vel ante mollis tincidunt. Donec nec magna condimentum tortor laoreet lobortis. Nunc accumsan sapien eu tortor fringilla, et condimentum metus pellentesque. Maecenas rhoncus tortor nec mi congue aliquet. Integer eu turpis scelerisque, iaculis magna non, tempor sem. Quisque consectetur nisi eu felis euismod, sit amet faucibus justo molestie. Ut pretium sapien dui, id facilisis metus interdum pharetra.</p>
+                  <p><img data-img-src="assets/images/other_images/transp-image4.png" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in urna vel ante mollis tincidunt. Donec nec magna condimentum tortor laoreet lobortis. Nunc accumsan sapien eu tortor fringilla, et condimentum metus pellentesque. Maecenas rhoncus tortor nec mi congue aliquet. Integer eu turpis scelerisque, iaculis magna non, tempor sem. Quisque consectetur nisi eu felis euismod, sit amet faucibus justo molestie. Ut pretium sapien dui, id facilisis metus interdum pharetra.</p>
                   <p>Etiam scelerisque lacus tempor, rhoncus diam vel, gravida felis. Fusce tristique sem et leo aliquam vulputate. Ut eget orci in sapien commodo fringilla. Ut luctus faucibus viverra. Quisque ut ante eget libero rutrum imperdiet. Morbi in diam bibendum, venenatis arcu sed, consequat libero. Nulla imperdiet, ipsum et adipiscing pulvinar, nibh metus porta mauris, et vestibulum dolor sapien sit amet justo. In dignissim leo nec erat faucibus volutpat.</p>
-                  <h3>Duis dictum lorem metus, vitae dapibus</h3>
-                  <p><img data-img-src="assets/images/other_images/transp-image3.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">Sed auctor urna mi, sed fringilla felis vulputate nec. Cras eu nibh id quam pretium convallis. Donec ante enim, placerat nec sagittis sit amet, tempor in velit. Maecenas ultricies commodo lacus id porta. Suspendisse eros elit, lacinia vitae erat vitae, egestas accumsan nunc. Maecenas dictum odio ipsum, non volutpat erat consequat tempor. Pellentesque sed malesuada turpis. Quisque eget lacus sit amet dui feugiat molestie sit amet eget purus. Morbi eget neque nec lectus tempus sagittis nec at ante. </p>
-                  <p>Etiam scelerisque lacus tempor, rhoncus diam vel, gravida felis. Fusce tristique sem et leo aliquam vulputate. Ut eget orci in sapien commodo fringilla. Ut luctus faucibus viverra. Quisque ut ante eget libero rutrum imperdiet. Morbi in diam bibendum, venenatis arcu sed, consequat libero. Nulla imperdiet, ipsum et adipiscing pulvinar, nibh metus porta mauris, et vestibulum dolor sapien sit amet justo. In dignissim leo nec erat faucibus volutpat.</p>
+                  <h3>Journey To GA</h3>
+                  <p><img data-img-src="assets/images/other_images/transp-image3.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">I've always been interested in technology. Be it whether it was hardware or software. My interests in coding came about during my time at Upstart. This was a startup company where their product was very new and was prone to have bugs. As a credit analyst and customer operations, I got to witness the bugs that occur in the product and report it to the engineers. In doing so, I got to see how the engineers solve the issues through code. Fast tracking to my move back to Singapore, I was searching for introduction classes for web development. I noticed that GA had a Web Development 101 as well as a Web Development Immersive course. I decided to give the Web Development 101 a try and found out that I really enjoy building something based from my own creativity. Few months later, I decided to take upon the challenge to leave my role as a recruiter and attend GA's Web Development Immersive course.</p>
                 </div><!-- #modal-content-1 -->
 
             </div><!-- .col-sm-10 -->
@@ -202,64 +202,80 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="grid" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg2.jpg">
-          <div class="content-wrapper clearfix">
-            <div class="col-sm-11 col-md-10 pull-right">
+        <article id="featured" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg3.jpg">
+            <div class="content-wrapper clearfix">
+              <div class="col-sm-11 pull-right">
 
-                <h1 class="section-title">Grid</h1>
+                  <h1 class="section-title">Education</h1>
 
-                <!-- grid -->
-                <section class="grid row clearfix clearfix-for-2cols">
+                  <!-- feature columns -->
+                  <section class="feature-columns row clearfix">
 
-                  <!-- grid item -->
-                  <div class="grid-item col-md-6">
-                    <div class="item-content clearfix">
-                      <span class="icon fa fa-area-chart"></span>
-                      <div class="text-content">
-                        <h5>Lorem ipsum dolor sit amet</h5>
-                        <p>Nullam ac rhoncus sapien, non gravida purus. Aliquam adipiscing eros non elit imperdiet congue. Integer ultricies.</p>
-                      </div>
-                    </div><!-- end: .item-content -->
-                  </div><!-- end: .grid-item -->
+                    <!-- feature 1 -->
+                    <article class="feature-col col-md-4">
+                      <a href="" onclick="populate_and_open_modal(event, 'modal-content-6');" class="thumbnail linked">
+                        <div class="image-container">
+                          <img data-img-src="assets/images/other_images/drexel.jpg" class="lazy item-thumbnail" alt="Lorem Ipsum">
+                        </div>
+                        <div class="caption">
+                          <h5>Drexel Universtiy</h5>
+                          <p>Graduated in 2015 from Drexel University with a major in Marketing.</p>
+                        </div><!-- .caption -->
+                      </a><!-- .thumbnail -->
+                    </article>
 
-                  <!-- grid item -->
-                  <div class="grid-item col-md-6">
-                    <div class="item-content clearfix">
-                      <span class="icon fa fa-globe"></span>
-                      <div class="text-content">
-                        <h5>Aliquam adipiscing eros non elit</h5>
-                        <p>Nullam ac rhoncus sapien, non gravida purus. Alinon elit imperdiet congue. Integer ultricies sed ligula eget tempus.</p>
-                      </div>
-                    </div><!-- end: .item-content -->
-                  </div><!-- end: .grid-item -->
+                    <!-- feature 2 -->
+                    <article class="feature-col col-md-4">
+                      <a href="" onclick="populate_and_open_modal(event, 'modal-content-7');" class="thumbnail linked">
+                        <div class="image-container">
+                          <img data-img-src="assets/images/other_images/DeAnza.jpg" class="lazy item-thumbnail" alt="Lorem Ipsum">
+                        </div>
+                        <div class="caption">
+                          <h5>De Anza College</h5>
+                          <p>Started my education route at De Anza College and graduated in 2012.Followed after by transferring to Drexel University</p>
+                        </div><!-- .caption -->
+                      </a><!-- .thumbnail -->
 
-                  <!-- grid item -->
-                  <div class="grid-item col-md-6">
-                    <div class="item-content clearfix">
-                      <span class="icon fa fa-certificate"></span>
-                      <div class="text-content">
-                        <h5>Integer ultricies sed ligula</h5>
-                        <p>Aliquam adipiscing eros non elit imperdiet congue. Integer ultricies sed ligula ligula eget.</p>
-                      </div>
-                    </div><!-- end: .item-content -->
-                  </div><!-- end: .grid-item -->
 
-                  <!-- grid item -->
-                  <div class="grid-item col-md-6">
-                    <div class="item-content clearfix">
-                      <span class="icon fa fa-cloud"></span>
-                      <div class="text-content">
-                        <h5>Lorem ipsum dolor sit amet</h5>
-                        <p>Nullam ac rhoncus. Aliquam adipiscing eros non elit imperdiet congue. Integer ultricies sed ligula eget tempus.</p>
-                      </div>
-                    </div><!-- end: .item-content -->
-                  </div><!-- end: .grid-item -->
+                    </article>
 
-                </section><!-- end: grid -->
+                    <!-- feature 3 -->
+                    <article class="feature-col col-md-4">
+                      <a href="" onclick="populate_and_open_modal(event, 'modal-content-8', '', 'full-size');" class="thumbnail linked">
+                        <div class="image-container">
+                          <img data-img-src="assets/images/other_images/general-assembly.jpg" class="lazy item-thumbnail" alt="Lorem Ipsum">
+                        </div>
+                        <div class="caption">
+                          <h5>General Assembly</h5>
+                          <p>Attended a 12 weeks web development immersive course where I was able to develop skills with Javascript, HTML, CSS, Ruby on Rails</p>
+                        </div><!-- .caption -->
+                      </a><!-- .thumbnail -->
 
-            </div><!-- .col-sm-11 -->
-          </div><!-- .content-wrapper -->
-        </article><!-- .section-wrapper -->
+                      <div class="content-to-populate-in-modal" id="modal-content-8">
+                        <h1>Sed scelerisque</h1>
+                        <p>Nullam ac rhoncus. Aliquam adipiscing eros non elit imperdiet congue. Etiam at ligula sit amet arcu laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio</a>, sit amet. Adipiscing eros non elit imperdiet congue tiam at ligula sit amet arcu.</p>
+
+                        <!-- alt image slider inside popup -->
+                        <div id="unique-id-for-alt-image-slider" class="owl-carousel popup-alt-image-gallery">
+                          <div class="item"><a href="assets/images/other_images/bg1.jpg" data-lightbox="popup-alt-gallery"><img class="lazyOwl" data-src="assets/images/other_images/gallery-thumb-1.jpg"></a></div>
+                          <div class="item"><a href="assets/images/other_images/bg2.jpg" data-lightbox="popup-alt-gallery"><img class="lazyOwl" data-src="assets/images/other_images/gallery-thumb-2.jpg"></a></div>
+                          <div class="item"><a href="assets/images/other_images/bg3.jpg" data-lightbox="popup-alt-gallery"><img class="lazyOwl" data-src="assets/images/other_images/gallery-thumb-3.jpg"></a></div>
+                          <div class="item"><a href="assets/images/other_images/bg4.jpg" data-lightbox="popup-alt-gallery"><img class="lazyOwl" data-src="assets/images/other_images/gallery-thumb-4.jpg"></a></div>
+                          <div class="item"><a href="assets/images/other_images/bg5.jpg" data-lightbox="popup-alt-gallery"><img class="lazyOwl" data-src="assets/images/other_images/gallery-thumb-5.jpg"></a></div>
+                          <div class="item"><a href="assets/images/other_images/bg6.jpg" data-lightbox="popup-alt-gallery"><img class="lazyOwl" data-src="assets/images/other_images/gallery-thumb-6.jpg"></a></div>
+                          <div class="item"><a href="assets/images/other_images/bg2.jpg" data-lightbox="popup-alt-gallery"><img class="lazyOwl" data-src="assets/images/other_images/gallery-thumb-2.jpg"></a></div>
+                          <div class="item"><a href="assets/images/other_images/bg3.jpg" data-lightbox="popup-alt-gallery"><img class="lazyOwl" data-src="assets/images/other_images/gallery-thumb-3.jpg"></a></div>
+                        </div>
+                      </div><!-- #modal-content-8 -->
+                    </article>
+
+                  </section><!-- end: .feature-columns -->
+
+                <!-- End: Section content to edit -->
+
+              </div><!-- .col-sm-10 -->
+            </div><!-- .content-wrapper -->
+          </article><!-- .section-wrapper -->
 
         <article id="contact" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg4.jpg">
           <div class="content-wrapper clearfix">
@@ -274,7 +290,7 @@
                 </div>
                 <!-- END: CONTACT DETAILS -->
 
-                <!-- CONTACT FORM -->
+                <!-- contact form -->
                 <div class="col-sm-7 col-md-9">
                   <!-- IMPORTANT: change the email address at the top of the assets/php/mail.php file to the email address that you want this form to send to -->
                   <form class="form-style validate-form clearfix" action="assets/php/mail.php" method="POST" role="form">
@@ -310,7 +326,7 @@
                     </div><!-- end: form right col -->
 
                   </form>
-                </div><!-- end: CONTACT FORM -->
+                </div><!-- end: CONTACT FORM
 
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
