--- a/index.html
+++ b/index.html
@@ -97,12 +97,19 @@
                 <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-1');" class="btn btn-outline-inverse btn-sm">read more</a></p>
 
                 <div class="content-to-populate-in-modal" id="modal-content-1">
-                  <h1>Resume</h1>
-                  <p><img data-img-src="assets/images/other_images/transp-image4.png" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in urna vel ante mollis tincidunt. Donec nec magna condimentum tortor laoreet lobortis. Nunc accumsan sapien eu tortor fringilla, et condimentum metus pellentesque. Maecenas rhoncus tortor nec mi congue aliquet. Integer eu turpis scelerisque, iaculis magna non, tempor sem. Quisque consectetur nisi eu felis euismod, sit amet faucibus justo molestie. Ut pretium sapien dui, id facilisis metus interdum pharetra.</p>
-                  <p>Etiam scelerisque lacus tempor, rhoncus diam vel, gravida felis. Fusce tristique sem et leo aliquam vulputate. Ut eget orci in sapien commodo fringilla. Ut luctus faucibus viverra. Quisque ut ante eget libero rutrum imperdiet. Morbi in diam bibendum, venenatis arcu sed, consequat libero. Nulla imperdiet, ipsum et adipiscing pulvinar, nibh metus porta mauris, et vestibulum dolor sapien sit amet justo. In dignissim leo nec erat faucibus volutpat.</p>
+                  <h1>Past Experience</h1>
+                  <p><img data-img-src="assets/images/other_images/picture.jpg" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">
+                    I graduated in June of 2015 at Drexel University with a degree in Marketing. Having an in depth experience in the sales technology industry mainly focused on database infrastructure. Interested in doing any sales position with established technology firms or start-up companies in San Francisco Bay Area, though not limited to San Francisco.
+
+                    Prior to graduation, I worked with U-Combinations Technology in Wayne, Pennsylvania focused on sales consulting as well as well as selling to clients’ around Central Philadelphia ranging from Chartered Schools, Factories, Restaurants, Financial Businesses and Juvenile Justice Centers. Some of the products that I sold and familiar with were Virtualization Machine, IBM and Dell Servers, Point of Sale systems and network equipment.
+
+                    Upon graduation, I returned back to California and worked in a company called "Upstart" which was a peer to peer lending company that help clients’ with their financing without solely depending on their credit score but also, by their school, area of study, academic performance and work history to achieve the best rate. During the first 3 months I held the position as a customer operations asssoicate followed shortly after by my new role as a credit analyst.
+
+                    A year after graudation, I decided to move back to Singapore where I pursued a role as a recruiter in the banking industry. My area of focus was in product control and valuations as well as operations.
+
+                    I am passionately driven by new innovative technology that is able to serve communities to promote a platform for new and existing businesses to strive upon. Andre enjoys meeting with new people to consult and listen to their needs to offer the best solution to meet their satisfaction.</p>
                   <h3>Journey To GA</h3>
-                  <p><img data-img-src="assets/images/other_images/transp-image3.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">I've always been interested in technology. Be it whether it was hardware or software. My interests in coding came about during my time at Upstart. This was a startup company where their product was very new and was prone to have bugs. As a credit analyst and customer operations, I got to witness the bugs that occur in the product and report it to the engineers. In doing so, I got to see how the engineers solve the issues through code. Fast tracking to my move back to Singapore, I was searching for introduction classes for web development. I noticed that GA had a Web Development 101 as well as a Web Development Immersive course. I decided to give the Web Development 101 a try and found out that I really enjoy building something based from my own creativity. Few months later, I decided to take upon the challenge to leave my role as a recruiter and attend GA's Web Development Immersive course.</p>
+                  <p><img data-img-src="assets/images/other_images/wdi8.jpg" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">I've always been interested in technology. Be it whether it was hardware or software. My interests in coding came about during my time at Upstart. This was a startup company where their product was very new and was prone to have bugs. As a credit analyst and customer operations, I got to witness the bugs that occur in the product and report it to the engineers. In doing so, I got to see how the engineers solve the issues through code. Fast tracking to my move back to Singapore, I was searching for introduction classes for web development. I noticed that GA had a Web Development 101 as well as a Web Development Immersive course. I decided to give the Web Development 101 a try and found out that I really enjoy building something based from my own creativity. Few months later, I decided to take upon the challenge to leave my role as a recruiter and attend GA's Web Development Immersive course.</p>
                 </div><!-- #modal-content-1 -->
 
             </div><!-- .col-sm-10 -->
@@ -134,7 +141,7 @@
 
                       <div class="content-to-populate-in-modal" id="modal-content-2">
                         <h1>Rapid Typer</h1>
-                        <p><img data-img-src="assets/images/other_images/transp-image1.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">
+                        <p><img data-img-src="assets/images/other_images/rapidtyper.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">
                         <p>For my first project at WDI, I created a game called, "Rapid Typer". The purpose of the game is to have players challenge one another to achieve the best score possible before the timer runs out. Each player will take turns once the game in over. The motivation to create such a game came from my 8 year old niece as she is learning how to use the keyboard for a computer apart from using a touch screen. This was a good opportunity for me to introduce a game to her in which I used to play when I was learning how to use a keyboard back in the day. I drew inspiration from a very popular online typing game called "Type Racer" as it has people all over the world competing to see who can type the fastest and the most words in a minute.</p><br><p>The tools that were used to create this project were HTML,CSS, and Javascript</p>
                         <p><a href="https://cycopter12.github.io/wdi-project-1-cycopter12/" class="btn btn-outline-inverse btn-sm">Try It!</a></p>
                       </div><!-- #modal-content-2 -->
@@ -153,7 +160,7 @@
                         <p><img data-img-src="assets/images/other_images/transp-image6.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">
                         <p>For my second project, I create a food review website for healthy snacks. This website was created to help the public know about healthier snack alternatives. This was my first full stack website where I implemented features such as login and sign up capabilities as well as having administrative rights to add,update and delete food items. In addition, public users will be able to add comments to the individual food items.</p>
                         <p>This project was created using HTML,CSS,Javascript,Node.js, express along with the usage of database(MongoDB).</p>
-                        <p><a href="https://fathomless-springs-28288.herokuapp.com/" class="btn btn-outline-inverse btn-sm">Try It!</a></p>
+                        <p><a href="http://snack-mania.herokuapp.com/" class="btn btn-outline-inverse btn-sm">Try It!</a></p>
                       </div><!-- #modal-content-3 -->
                     </div>
                   </div><!-- .item -->
@@ -163,13 +170,13 @@
                       <img src="assets/images/other_images/transp-image7.png" class="icon" alt="Lorem Ipsum">
                       <h2 class="title">Common Place</h2>
                       <p>No time for weekly chores? Common Place coordinates with your condo's concierge to bring services to help with your weekly needs. </p>
-                      <p><a href="https://commonplaces-app.herokuapp.com/" onclick="populate_and_open_modal(event, 'modal-content-4');" class="btn btn-outline-inverse btn-sm">read more</a></p>
+                      <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-4');" class="btn btn-outline-inverse btn-sm">read more</a></p>
 
                       <div class="content-to-populate-in-modal" id="modal-content-4">
                         <h1>Common Place</h1>
-                        <p><img data-img-src="assets/images/other_images/transp-image7.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">
+                        <p><img data-img-src="assets/images/other_images/commonplace.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">
                         <p>For my third project, my group and I created a concierge service website called Common Place. This project was to target condos withthe idea that its residence may not have the time to do weekly chores such as groceries, dry cleaning, pet grooming and etc. During the process of creating this project, we setup interviews to the general public on how they felt about doing weekly chores and what their expectations were if there were to be such a service like Common Places avaliable. To further demostrate what we have learned in this course thus far, we made use of the another language called ruby on rails.</p><p>The tools that were used to make this website involved using, database(postico), Bootstrap HTML, CSS, and Ruby on Rails.</p>
-                        <p><a href="https://uglyfood.herokuapp.com/" class="btn btn-outline-inverse btn-sm">Try It!</a></p>
+                        <p><a href="https://commonplaces-app.herokuapp.com/" class="btn btn-outline-inverse btn-sm">Try It!</a></p>
                       </div><!-- #modal-content-4 -->
                     </div>
                   </div><!-- .item -->
@@ -182,10 +189,8 @@
                       <p><a href=""onclick="populate_and_open_modal(event, 'modal-content-5');"  class="btn btn-outline-inverse btn-sm">Read More</a></p>
 
                       <div class="content-to-populate-in-modal" id="modal-content-5">
-                        <h1>Sed scelerisque</h1>
-                        <p><img data-img-src="assets/images/other_images/transp-image4.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">Etiam at ligula sit amet arcu laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. <a href="#">Suspendisse molestie lorem odio</a>, sit amet. </p>
-                        <p>Laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio, sit amet.</p>
-                        <p>Suspendisse molestie lorem odio, sit amet. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio test.</p>
+                        <h1>Ugly Foods</h1>
+                        <p><img data-img-src="assets/images/other_images/uglyfoods.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">For my final project at General Assembly, my group and I decided that we wanted to create a solution for food waste through grocery stores in Singapore. Often times, food would be thrown out not due to their quality but because of their appearance. This is where ugly foods comes in with the goal to help organizations purchase the produce with the lesser appearance whcih still provides the same nutrients and value as a perfectly looking produce. In addition, the public will be able to share articles and receipes that they have created with these produces.</p>
                         <p><a href="https://uglyfood.herokuapp.com/" class="btn btn-outline-inverse btn-sm">Try It!</a></p>
                       </div><!-- #modal-content-5 -->
                     </div>
@@ -280,8 +285,6 @@
         <article id="contact" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg4.jpg">
           <div class="content-wrapper clearfix">
 
-              <h1 class="section-title">Contact</h1>
-
                 <!-- CONTACT DETAILS -->
                 <div class="contact-details col-sm-5 col-md-3">
                   <p>https://github.com/cycopter12</p>
@@ -289,44 +292,6 @@
                   <p><a href="andre.the12@gmail.com">andre.the12@gmail.com</a></p>
                 </div>
                 <!-- END: CONTACT DETAILS -->
-
-                <!-- contact form -->
-                <div class="col-sm-7 col-md-9">
-                  <!-- IMPORTANT: change the email address at the top of the assets/php/mail.php file to the email address that you want this form to send to -->
-                  <form class="form-style validate-form clearfix" action="assets/php/mail.php" method="POST" role="form">
-
-                    <!-- form left col -->
-                    <div class="col-md-6">
-                      <div class="form-group">
-                        <input type="text" class="text-field form-control validate-field required" data-validation-type="string" id="form-name" placeholder="Full Name" name="name">
-                      </div>
-                      <div class="form-group">
-                        <input type="email" class="text-field form-control validate-field required" data-validation-type="email" id="form-email" placeholder="Email Address" name="email">
-                      </div>
-                      <div class="form-group">
-                        <input type="tel" class="text-field form-control validate-field phone" data-validation-type="phone" id="form-contact-number" placeholder="Contact Number" name="contact_number">
-                      </div>
-                      <div class="form-group text-right">
-                        <img id="form-captcha-img" src="assets/php/form_captcha/captcha_img.php">
-                        <input type="text" class="text-field form-control validate-field required" data-validation-type="captcha" id="form-captcha" placeholder="Enter text" name="captcha">
-                        <span id="form-captcha-refresh" class="fa fa-refresh" title="Reload"></span>
-                      </div>
-                    </div><!-- end: form left col -->
-
-                    <!-- form right col -->
-                    <div class="col-md-6">
-                      <div class="form-group">
-                        <textarea placeholder="Message..." class="form-control validate-field required" name="message"></textarea>
-                      </div>
-                      <div class="form-group">
-                        <img src="assets/images/theme_images/loader-form.GIF" class="form-loader">
-                        <button type="submit" class="btn btn-sm btn-outline-inverse">Submit</button>
-                      </div>
-                      <div class="form-group form-general-error-container"></div>
-                    </div><!-- end: form right col -->
-
-                  </form>
-                </div><!-- end: CONTACT FORM
 
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
@@ -346,7 +311,7 @@
         </ul>
 
         <!-- copyright text -->
-        <div class="footer-text-line">&copy; 2014 Twilli | Air</div>
+
       </section>
       <!-- end: Footer -->
 
