made changes to projects

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                   <div class="item active">
                     <div class="carousel-text-content">
-                      <img src="assets/images/other_images/transp-image1.png" class="icon" alt="Lorem Ipsum">
+                      <!-- <img src="assets/images/other_images/transp-image1.png" class="icon" alt="Lorem Ipsum"> -->
                       <h2 class="title">Rapid Typer</h2>
                       <p>Challenge your friends and family to see who can get the highest score within the time limit.</p>
                       <p><a href=""  onclick="populate_and_open_modal(event, 'modal-content-2');" class="btn btn-outline-inverse btn-sm">Read More</a></p>
@@ -144,30 +144,33 @@
                         <p><img data-img-src="assets/images/other_images/rapidtyper.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">
                         <p>For my first project at WDI, I created a game called, "Rapid Typer". The purpose of the game is to have players challenge one another to achieve the best score possible before the timer runs out. Each player will take turns once the game in over. The motivation to create such a game came from my 8 year old niece as she is learning how to use the keyboard for a computer apart from using a touch screen. This was a good opportunity for me to introduce a game to her in which I used to play when I was learning how to use a keyboard back in the day. I drew inspiration from a very popular online typing game called "Type Racer" as it has people all over the world competing to see who can type the fastest and the most words in a minute.</p><br><p>The tools that were used to create this project were HTML,CSS, and Javascript</p>
                         <p><a href="https://cycopter12.github.io/wdi-project-1-cycopter12/" class="btn btn-outline-inverse btn-sm">Try It!</a></p>
+                        <p><a href="https://github.com/cycopter12/wdi-project-1-cycopter12" class="btn btn-outline-inverse btn-sm">Github</a></p>
                       </div><!-- #modal-content-2 -->
                     </div>
                   </div><!-- .item -->
 
                   <div class="item">
                     <div class="carousel-text-content">
-                      <img src="assets/images/other_images/transp-image6.png" class="icon" alt="Lorem Ipsum">
+
+                      <!-- <img src="assets/images/other_images/transp-image6.png" class="icon" alt="Lorem Ipsum"> -->
                       <h2 class="title">Snack Mania</h2>
                       <p>A web app aiming to review healthy snacks for the general public.</p>
                       <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-3');" class="btn btn-outline-inverse btn-sm">Read More</a></p>
 
                       <div class="content-to-populate-in-modal" id="modal-content-3">
+                        <p><img data-img-src="assets/images/other_images/snackmania.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">
                         <h1>Snack Mania</h1>
-                        <p><img data-img-src="assets/images/other_images/transp-image6.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">
                         <p>For my second project, I create a food review website for healthy snacks. This website was created to help the public know about healthier snack alternatives. This was my first full stack website where I implemented features such as login and sign up capabilities as well as having administrative rights to add,update and delete food items. In addition, public users will be able to add comments to the individual food items.</p>
                         <p>This project was created using HTML,CSS,Javascript,Node.js, express along with the usage of database(MongoDB).</p>
                         <p><a href="http://snack-mania.herokuapp.com/" class="btn btn-outline-inverse btn-sm">Try It!</a></p>
+                        <p><a href="https://github.com/cycopter12/wdi-project-2-cycopter12" class="btn btn-outline-inverse btn-sm">Git Hub</a></p>
                       </div><!-- #modal-content-3 -->
                     </div>
                   </div><!-- .item -->
 
                   <div class="item">
                     <div class="carousel-text-content">
-                      <img src="assets/images/other_images/transp-image7.png" class="icon" alt="Lorem Ipsum">
+                      <!-- <img src="assets/images/other_images/transp-image7.png" class="icon" alt="Lorem Ipsum"> -->
                       <h2 class="title">Common Place</h2>
                       <p>No time for weekly chores? Common Place coordinates with your condo's concierge to bring services to help with your weekly needs. </p>
                       <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-4');" class="btn btn-outline-inverse btn-sm">read more</a></p>
@@ -176,22 +179,26 @@
                         <h1>Common Place</h1>
                         <p><img data-img-src="assets/images/other_images/commonplace.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">
                         <p>For my third project, my group and I created a concierge service website called Common Place. This project was to target condos withthe idea that its residence may not have the time to do weekly chores such as groceries, dry cleaning, pet grooming and etc. During the process of creating this project, we setup interviews to the general public on how they felt about doing weekly chores and what their expectations were if there were to be such a service like Common Places avaliable. To further demostrate what we have learned in this course thus far, we made use of the another language called ruby on rails.</p><p>The tools that were used to make this website involved using, database(postico), Bootstrap HTML, CSS, and Ruby on Rails.</p>
+                        <div>
                         <p><a href="https://commonplaces-app.herokuapp.com/" class="btn btn-outline-inverse btn-sm">Try It!</a></p>
+                        <p><a href="https://github.com/wshimei/project-3-das" class="btn btn-outline-inverse btn-sm">Github</a></p>
+                      </div>
                       </div><!-- #modal-content-4 -->
                     </div>
                   </div><!-- .item -->
 
                   <div class="item">
                     <div class="carousel-text-content">
-                      <img src="assets/images/other_images/transp-image4.png" class="icon" alt="Lorem Ipsum">
+                      <!-- <img src="assets/images/other_images/transp-image4.png" class="icon" alt="Lorem Ipsum"> -->
                       <h2 class="title">Ugly Foods</h2>
                       <p>A food wastage solution for groceries stores.</p>
                       <p><a href=""onclick="populate_and_open_modal(event, 'modal-content-5');"  class="btn btn-outline-inverse btn-sm">Read More</a></p>
 
                       <div class="content-to-populate-in-modal" id="modal-content-5">
                         <h1>Ugly Foods</h1>
-                        <p><img data-img-src="assets/images/other_images/uglyfoods.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">For my final project at General Assembly, my group and I decided that we wanted to create a solution for food waste through grocery stores in Singapore. Often times, food would be thrown out not due to their quality but because of their appearance. This is where ugly foods comes in with the goal to help organizations purchase the produce with the lesser appearance whcih still provides the same nutrients and value as a perfectly looking produce. In addition, the public will be able to share articles and receipes that they have created with these produces.</p>
+                        <p><img data-img-src="assets/images/other_images/uglyfoods.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">For my final project at General Assembly, my group and I decided that we wanted to create a solution for food waste through grocery stores in Singapore. Often times, food would be thrown out not due to their quality but because of their appearance. This is where ugly foods comes in with the goal to help organizations purchase the produce with the lesser appearance whcih still provides the same nutrients and value as a perfectly looking produce. In addition, the public will be able to share articles and receipes that they have created with these produces.</p><p>The tools that were used to create this website were HTML,CSS, React.js, AJAX, and Ruby on Rails</p>
                         <p><a href="https://uglyfood.herokuapp.com/" class="btn btn-outline-inverse btn-sm">Try It!</a></p>
+                        <p><a href="https://github.com/cycopter12/project-4-uglyfood" class="btn btn-outline-inverse btn-sm">Github</a></p>
                       </div><!-- #modal-content-5 -->
                     </div>
                   </div><!-- .item -->
