edited about page

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                     A year after graudation, I decided to move back to Singapore where I pursued a role as a recruiter in the banking industry. My area of focus was in product control and valuations as well as operations.
 
-                    I am passionately driven by new innovative technology that is able to serve communities to promote a platform for new and existing businesses to strive upon. Andre enjoys meeting with new people to consult and listen to their needs to offer the best solution to meet their satisfaction.</p>
+                    I am passionately driven by new innovative technology that is able to serve communities to promote a platform for new and existing businesses to strive upon. My biggest passion of all is to enjoy meeting with new people to consult and listen to their needs to offer the best solution to meet their satisfaction.</p>
                   <h3>Journey To GA</h3>
                   <p><img data-img-src="assets/images/other_images/wdi8.jpg" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">I've always been interested in technology. Be it whether it was hardware or software. My interests in coding came about during my time at Upstart. This was a startup company where their product was very new and was prone to have bugs. As a credit analyst and customer operations, I got to witness the bugs that occur in the product and report it to the engineers. In doing so, I got to see how the engineers solve the issues through code. Fast tracking to my move back to Singapore, I was searching for introduction classes for web development. I noticed that GA had a Web Development 101 as well as a Web Development Immersive course. I decided to give the Web Development 101 a try and found out that I really enjoy building something based from my own creativity. Few months later, I decided to take upon the challenge to leave my role as a recruiter and attend GA's Web Development Immersive course.</p>
                 </div><!-- #modal-content-1 -->
@@ -240,7 +240,7 @@
                     <article class="feature-col col-md-4">
                       <a href="" onclick="populate_and_open_modal(event, 'modal-content-7');" class="thumbnail linked">
                         <div class="image-container">
-                          <img data-img-src="assets/images/other_images/DeAnza.jpg" class="lazy item-thumbnail" alt="Lorem Ipsum">
+                          <img data-img-src="assets/images/other_images/deanzacollege.jpg" class="lazy item-thumbnail" alt="Lorem Ipsum">
                         </div>
                         <div class="caption">
                           <h5>De Anza College</h5>
