edited Past experience

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="content-to-populate-in-modal" id="modal-content-1">
                   <h1>Past Experience</h1>
                   <p><img data-img-src="assets/images/other_images/picture.jpg" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">
-                    I graduated in June of 2015 at Drexel University with a degree in Marketing. Having an in depth experience in the sales technology industry mainly focused on database infrastructure. Interested in doing any sales position with established technology firms or start-up companies in San Francisco Bay Area, though not limited to San Francisco.
+                    I graduated in June of 2015 at Drexel University with a degree in Marketing. Having an in depth experience in the sales technology industry mainly focused on database infrastructure. Interested in business development positions with established technology firms or start-up companies in Singapore.
 
                     Prior to graduation, I worked with U-Combinations Technology in Wayne, Pennsylvania focused on sales consulting as well as well as selling to clients’ around Central Philadelphia ranging from Chartered Schools, Factories, Restaurants, Financial Businesses and Juvenile Justice Centers. Some of the products that I sold and familiar with were Virtualization Machine, IBM and Dell Servers, Point of Sale systems and network equipment.
 
