took out links for education

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
                     <!-- feature 3 -->
                     <article class="feature-col col-md-4">
-                      <a href="" onclick="populate_and_open_modal(event, 'modal-content-8', '', 'full-size');" class="thumbnail linked">
+                      <a  class="thumbnail linked">
                         <div class="image-container">
                           <img data-img-src="assets/images/other_images/general-assembly.jpg" class="lazy item-thumbnail" alt="Lorem Ipsum">
                         </div>
