made small changes

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                 <h1 class="section-title">About Me</h1>
 
-                <p class="feature-paragraph">Graduated from Drexel University in 2015, majoring in Marketing.</p>
+                <p class="feature-paragraph">Graduated from Drexel University with a Bachelors of Science in Business Administration with an emphasis in Marketing in 2015.</p>
                 <h4>Path To Be A Developer</h4>
                 <p>Before becoming a programmer, my experiences revolved around sales. This would range from being a sales engineer to being a recruiter. I've been a part of the technology, banking and finance industry which ultimately led me to my decision to attend General Assembly's Web Development Immersive.</p>
                 <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-1');" class="btn btn-outline-inverse btn-sm">read more</a></p>
@@ -302,6 +302,8 @@
 
         <!-- Go to Top -->
         <div id="go-to-top" onclick="scroll_to_top();"><span class="icon glyphicon glyphicon-chevron-up"></span></div>
+
+
 
         <!-- copyright text -->
 
