ugly foods url updated

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                       <div class="content-to-populate-in-modal" id="modal-content-5">
                         <h1>Ugly Foods</h1>
                         <p><img data-img-src="assets/images/other_images/uglyfoods.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">For my final project at General Assembly, my group and I decided that we wanted to create a solution for food waste through grocery stores in Singapore. Often times, food would be thrown out not due to their quality but because of their appearance. This is where ugly foods comes in with the goal to help organizations purchase the produce with lesser appearance which still provides the same nutrients and value as a perfectly looking produce. In addition, the public will be able to share articles and receipes that they have created with these produces.</p><p>The tools that were used to create this website were HTML,CSS, React.js, AJAX, and Ruby on Rails</p>
-                        <p><a href="https://uglyfood.herokuapp.com/" class="btn btn-outline-inverse btn-sm">Try It!</a></p>
+                        <p><a href="https://uglyfoods.herokuapp.com/" class="btn btn-outline-inverse btn-sm">Try It!</a></p>
                         <p><a href="https://github.com/cycopter12/project-4-uglyfood" class="btn btn-outline-inverse btn-sm">Github</a></p>
                       </div><!-- #modal-content-5 -->
                     </div>
